[package]
name = "kiraftp"
version = "1.1.1"
authors = ["Slowy <slowyfine@gmail.com>"]
edition = "2018"
license = "GPL-3.0-only"

[dependencies]
tokio = { version = "^1.11.0", features = ["full"] }
tokio-stream = { version = "^0.1.7", features = ["io-util"] }
serde = { version = "^1.0.130", features = ["derive"] }
serde_yaml = "^0.8.21"
slog = "^2.7.0"
slog-term = "^2.8.0"
slog-async = "^2.7.0"
libc = "^0.2.101"
chrono = "^0.4.19"
users = "^0.11.0"
